@@ -28,6 +28,8 @@ The rules for this file:
     special select values "all" and None.
   * new set_* methods for AtomGroup allows changing of Atom attributes
     for all members of the group (such as the segid) (EXPERIMENTAL)
+  * new Atom and Residue attribute resnum that can be used to store
+    the canonical PDB residue number (EXPERIMENTAL)
 
   Fixes
  
